Fix overflow

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -7,8 +7,11 @@ body{
   box-sizing: border-box;
   margin:0px;
   font-family: 'Source Sans Pro', sans-serif;
-  overflow-x: hidden;
   background-color:var(--main-color);
+}
+
+.container{
+  overflow-x: hidden;
 }
 
 #first_section {
@@ -163,6 +166,7 @@ body{
   width:100%;
   height:100%;
   background: linear-gradient(60deg, var(--main-color) 52%, transparent 52.1%);
+
 }
 
 #bg_div2 {
@@ -171,6 +175,7 @@ body{
   width:100%;
   height:100%;
   background: linear-gradient(60deg, transparent 51%, var(--seccond-color)  51%);
+  
 }
 
 #about_section{
@@ -182,6 +187,7 @@ body{
   grid-template: 1fr/1fr 1fr;
   background-size: cover;
   background-position: center;
+
 }
 
 #about_section>div{
